# esp32-cambridge-transit

./: .gitignore  README.md
.github/workflows/: docker-deploy.yml
api/: .dockerignore  Dockerfile  README.md  bus_info.py  env.py  main.py  mise.toml  pyproject.toml  utils.py
api/app/: main.py  utils.py
micro/: README.md  platformio.ini
micro/src/: GXEPD2_display_selection_new_style.h  GxEPD2_selection_check.h  main.cpp
src/: main.cpp
