[project]
name = "esp32-cambridge-transit-api"
version = "0.1.0"
description = "Aggregate API for Cambridge transit ESP32 project"
authors = [{ name = "awphi", email = "admin@adamw.ph" }]
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
  "aiohttp>=3.13.2",
  "async-lru>=2.0.5",
  "bs4>=0.0.2",
  "environs>=14.5.0",
  "fastapi[standard]>=0.127.1",
]


[dependency-groups]
dev = ["ruff>=0.14.10"]

[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = ["F", "B", "I", "SIM", "C4"]

[tool.uv]
package = false
